--- a/U1_Justinas_Velička/css/styles.css
+++ b/U1_Justinas_Velička/css/styles.css
@@ -1,30 +1,35 @@
 /* all */
 
 * {
-  font-family: "Exo", sans-serif;
   margin: 0;
   padding: 0;
+  font-family: "Exo", sans-serif;
 }
 
 body {
-    background: #f8f8f8 !important;
+  background: #f8f8f8 !important;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-    font-family: "Exo", sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-family: "Exo", sans-serif;
 }
 
 .heading {
-    color: #2c3e50;
-    font-size: 30px;
-    font-weight: 400;
+  color: #2c3e50;
+  font-size: 30px;
+  font-weight: 400;
 }
 
 p {
-    color: #697070;
+  color: #697070;
 }
 /* header */
-
 
 #logo {
   height: 60px;
@@ -32,61 +37,65 @@ p {
 }
 
 .image-container {
-  box-shadow: 0 9px 3px -3px gray;
+  box-shadow: 0 10px 3px -3px rgba(0, 0, 0, 0.2);
 }
 
 /* articles */
 
 .card-title {
-    color: #6eb92b;
-    font-size: 24px;
-    font-weight: 400;
+  color: #6eb92b;
+  font-size: 24px;
+  font-weight: 400;
 }
 
-.card-subtitle, .card-text {
-    font-size: 16px;
-    font-weight: 200;
+.card-subtitle,
+.card-text {
+  font-size: 16px;
+  font-weight: 200;
 }
-
 
 .card {
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
-.card-body, .card {
-    background: #ffffff;
+.card-body,
+.card {
+  background: #ffffff;
 }
 
-#rating, i, .comment-count {
-    color: #697070;
+#rating,
+i,
+.comment-count {
+  color: #697070;
 }
 
-
-.checked, .fa-comment {
-    color: #6eb92b;
+.checked,
+.fa-comment {
+  color: #6eb92b;
 }
 
 #link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* forma */
 
 form label {
-    font-size: 20px;
-    color: #697070;
-    font-weight: 200;
+  font-size: 20px;
+  color: #697070;
+  font-weight: 200;
 }
 
 #submit {
-    background-color: #6eb92b !important;
-    color: #ffffff;
+  background-color: #6eb92b !important;
+  color: #ffffff;
 }
 
-input, button {
-    border-radius: 5px !important;
+input,
+button {
+  border-radius: 5px !important;
 }
 
 #newsletter {
-    color: #6eb92b;
+  color: #6eb92b;
 }
